# the_c_tutorial

./: readme.md
samples/01-hello_world/: comments.txt
samples/01-hello_world/hello/: main.c  meson.build
samples/01-hello_world/hello_args/: main.c  meson.build
samples/01-hello_world/hello_comments/: main.c
samples/01-hello_world/hello_io/: main.c  meson.build
samples/02-variables/arithmetic_operators/: main.c  meson.build
samples/02-variables/assignment_operators/: main.c  meson.build
samples/02-variables/bitwise_operators/: main.c  meson.build
samples/02-variables/const/: main.c  meson.build
samples/02-variables/increment_operators/: main.c  meson.build
samples/02-variables/static/: main.c  meson.build
samples/02-variables/variables/: main.c  meson.build
samples/03-types/array/: main.c  meson.build
samples/03-types/boolean/: main.c  meson.build
samples/03-types/char/: main.c  meson.build
samples/03-types/check_type/: main.c  meson.build
samples/03-types/enum/: main.c  meson.build
samples/03-types/floats/: main.c  meson.build
samples/03-types/integers/: main.c  meson.build
samples/04-strings/string_compare/: main.c  meson.build
samples/04-strings/string_concatenation/: main.c  meson.build
samples/04-strings/string_copying/: main.c  meson.build
samples/05-conditions/else_branch/: main.c  meson.build
samples/05-conditions/else_if_branch/: main.c  meson.build
samples/05-conditions/if_branch/: main.c  meson.build
samples/05-conditions/switch_branch/: main.c  meson.build
samples/05-conditions/ternary_branch/: main.c  (+1 more)
(+27 files in other folders)
